# MLOps-Platform-for-Customer-Churn-Prediction

./: .env.example  .gitignore  Makefile  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
artifacts/reports/: benchmark_spark_vs_sklearn.csv  benchmark_spark_vs_sklearn.md
configs/: airflow.yaml  api.yaml  app.yaml  dashboard.yaml  data.yaml  kafka.yaml  logging.yaml  model.yaml  monitoring.yaml  spark.yaml
dags/: churn_monitoring_dag.py
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.mlflow  init-dbs.sh  init.sql
pipelines/: __init__.py  benchmark_spark.py  build_dataset.py  predict_sklearn.py  promote_model.py  run_monitoring.py  serve_api.py  serve_dashboard.py  train_mlflow.py  train_sklearn.py  train_spark.py
src/churnops/: __init__.py  config.py  logging.py
src/churnops/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/churnops/dashboard/: __init__.py  charts.py  data_access.py
src/churnops/data/: __init__.py  clean.py  ingest.py  schema.py  split.py  validate.py
src/churnops/models/: __init__.py  inference.py  persistence.py  pipeline.py  preprocessing.py  train.py
src/churnops/monitoring/: __init__.py  alerts.py  collector.py  db.py  drift.py  performance.py  store.py
src/churnops/spark/: __init__.py  benchmark.py  pipeline.py  preprocessing.py  session.py  train.py
src/churnops/streaming/: __init__.py  (+7 more)
tests/: test_api.py  test_config.py  test_consumer.py  test_dashboard.py  test_data.py  test_inference.py  test_monitoring.py  test_pipeline.py  test_producer.py  test_spark.py  test_tracking.py
(+4 files in other folders)
