[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churnops"
version = "0.1.0"
description = "End-to-end Telco customer-churn MLOps platform"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.4",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "mlflow>=2.13.2",
    "confluent-kafka>=2.4.0",
    "joblib>=1.4.2",
    "pyspark>=3.5.0,<3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.4.9",
    "black>=24.4.2",
    "pre-commit>=3.7.1",
    "httpx>=0.27.0",        # required by FastAPI TestClient
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806", "N812", "N815"]  # N803/N806: X, X_train ML naming; N812: `functions as F` PySpark convention; N815: customerID, TotalCharges etc. match Telco dataset field names

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
